<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/ImageStyle"
                android:background="@drawable/americanfootball" />

            <LinearLayout
                android:id="@+id/allContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/Team_A" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/Team_B" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scoreTeamA"
                        style="@style/ResTextStyle"
                        android:text="@string/Zero" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/scoreTeamB"
                        style="@style/ResTextStyle"
                        android:text="@string/Zero" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/ButtonStyleA"
                        android:onClick="addSixTeamA"
                        android:text="@string/Six" />

                    <TextView
                        style="@style/DescTextStyle"
                        android:text="@string/Touch_Down" />

                    <Button
                        style="@style/ButtonStyleB"
                        android:onClick="addSixTeamB"
                        android:text="@string/Six" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/ButtonStyleA"
                        android:onClick="addThreeTeamA"
                        android:text="@string/Three" />

                    <TextView
                        style="@style/DescTextStyle"
                        android:text="@string/Field_Goal" />

                    <Button
                        style="@style/ButtonStyleB"
                        android:onClick="addThreeTeamB"
                        android:text="@string/Three" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/ButtonStyleA"
                        android:onClick="addTwoTeamA"
                        android:text="@string/Two" />

                    <TextView
                        style="@style/DescTextStyle"
                        android:text="@string/Safety_2PAT" />

                    <Button
                        style="@style/ButtonStyleB"
                        android:onClick="addTwoTeamB"
                        android:text="@string/Two" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/ButtonStyleA"
                        android:onClick="addOneTeamA"
                        android:text="@string/One" />

                    <TextView
                        style="@style/DescTextStyle"
                        android:text="@string/PAT_1" />

                    <Button
                        style="@style/ButtonStyleB"
                        android:onClick="addOneTeamB"
                        android:text="@string/One" />

                </LinearLayout>

            </LinearLayout>

            <Button
                style="@style/ButtonStyleReset"
                android:onClick="Reset"
                android:text="@string/Reset" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>